Remove old JVM options
Let's stick with the Java 17 defaults. They are very likely just fine.